<update>[1366]: update no main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: senai_automacao_vitorp
-run-name: ${{ github.actor }} Pipeline deploy $
+run-name: ${{ github.actor }} Pipeline deploy !
 on:
   push:
     branches:
